fix tooltip hide, update qle tooltip for bs4 to be right aligned, update js to hide tooltip on click

--- a/app/javascript/css/main.scss
+++ b/app/javascript/css/main.scss
@@ -676,3 +676,8 @@ a.disabled {
     color: var(--grey-100);
   }
 }
+
+.tooltip.fade.in {
+  opacity: 1;
+  filter: alpha(opacity=100);
+}
